--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Klettgau
 description: just a lost soul.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars2.githubusercontent.com/u/34455569?s=40&v=4
 
 #
 # Flags below are optional
